# elih.net

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  astro.config.ts  commands.md  package.json  pnpm-lock.yaml
context/: domain-migration-elih-net.md
public/: CNAME  site.webmanifest
public/runebender-web/: index.html
scripts/: repo-size-audit.sh
scripts/img2bez/: README.md  fig_g_compare.py  fig_g_interp.py  g-masters.json  lib.py  requirements.txt  vtracer.py
scripts/og/img2bez/: card.py
scripts/virtua-grotesk/: Cargo.toml  README.md  check_margins.py  check_model_card.py  export_social.py
scripts/virtua-grotesk/src/: inputs.rs  lib.rs  style.rs  technical.rs
src/: consts.ts  content.config.ts
src/components/: AuthorCard.astro  BlogCard.astro  Favicons.astro  Footer.astro  Head.astro  Header.astro  PostHead.astro  PostList.astro  PostNavigation.astro  ProjectCard.astro  TableOfContents.astro  TraceDemo.tsx  TraceDemoIsland.astro
src/components/ui/: badge.tsx  dropdown-menu.tsx  mobile-menu.tsx
src/data/: hasubi-mono-glyphs.json  mekorot-glyphs.json  virtua-grotesk-glyphs.json
src/layouts/: Layout.astro
src/lib/: data-utils.ts  utils.ts
src/lib/img2bez-wasm/: img2bez_wasm.d.ts  img2bez_wasm.js  img2bez_wasm_bg.wasm  img2bez_wasm_bg.wasm.d.ts
src/pages/: 404.astro  about.astro  hasubi-mono.astro  index.astro  mekorot.astro  projects.astro  virtua-grotesk.astro
src/pages/authors/: [...id].astro
src/pages/blog/: [...id].astro  index.astro
src/pages/fonts/: [...id].astro  index.astro
src/styles/: global.css  typography.css
(+7 files in other folders)
